[metadata]
name = orquestra-qulacs
description = "Orquestra Qulacs package"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-qulacs
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    numpy>=1.20
    scipy>=1.4.1
    sympy>=1.5,<=1.9
    cmake>=3.18
    qulacs~=0.5.0
    orquestra-quantum


[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
